# parallel-prefix-scan

./: CMakeLists.txt  README.md  gentest.py  plot.py
src/: inc.cpp  inc.h  main.cpp
src/parallel/: p_block.cpp  p_block.h  p_tree.cpp  p_tree.h
src/sequential/: seq_tree.cpp  seq_tree.h  serial_linear.cpp  serial_linear.h
